# parts_api

./: .env  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
_docker/: Dockerfile
_migrations/versions/: 2025_04_16_1429-ccabb5fa9e05_create_manufacturer_table.py  2025_04_16_1431-88a00170c43b_create_category_table.py  2025_04_16_1432-27f25b1d508d_create_model_table.py  2025_04_16_1433-8a946fe3087e_create_part_table.py
migrations/: env.py
migrations/versions/: 1550b7f3537c_create_all_tables.py  659f950cac8b_add_all_tables.py  9bc44f4343db_drop_unique.py  d7747549933f_create_all_tables.py
parts_api/: db.py  utils.py
parts_api/category/: db.py  router.py  schema.py  table.py
parts_api/manufacturer/: db.py  router.py  schema.py  table.py
parts_api/model/: db.py  router.py  schema.py  table.py
parts_api/part/: db.py  router.py  schema.py  table.py
parts_api/service/: scrape.py
parts_api/settings/: db.py
parts_api/worker/: api.py  scrape.py
tests/: conftest.py
tests/category/: test_db.py
