[project]
name = "parts-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "mypy>=1.15.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.5",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "yarl>=1.19.0",
]
